# ProcTap

./: .gitignore  404.html  CLAUDE.md  MANIFEST.in  OPTIMIZATION_SUMMARY.md  README.md  build.bat  build.py  build.sh  debug_backend.py  index.html  mkdocs.yml  pyproject.toml  read_pipe.py  read_pipe_fixed.py  setup.py  sitemap.xml  test_capture.py  test_cli.py  test_converter_optimizations.py  test_pipe_issue.py
.claude/: settings.local.json
.claude/commands/: gcomment.md
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  documentation.yml  feature_request.md  performance.md  type_hints_async.md
.github/workflows/: build-wheels.yml  docs.yml  publish-pypi.yml  release-testpypi.yml  test-macos-signing.yml  test.yml
api/processaudiotap/: index.html
benchmarks/: benchmark_converter_optimizations.py
changelog/: index.html
docs/: changelog.md  index.md  macos-processtap-signing.md
docs/api/: processaudiotap.md  streamconfig.md
docs/getting-started/: installation.md  (+1 more)
examples/: README.md  linux_basic.py  macos_basic.py  macos_screencapture_test.py  record_proc_to_wav.py  windows_basic.py
macos-processtap-signing/: index.html
macos_core_audio_research/: index.html
macos_include_exclude_pids_implementation/: index.html
search/: search_index.json
tests/: test_backend_error_handling.py  test_converter_constants.py  test_linux_backend.py  test_linux_pw_link_helpers.py  test_linux_strategies.py  test_macos_processtap.py  test_no_bare_except.py  test_resample_quality.py  test_resample_streaming.py
(+38 files in other folders)
