[metadata]
name = processaudiotap
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    mypy
    types-setuptools

[build_ext]
inplace = 0

[options.entry_points]
# CLI作るならここに script_name = processaudiotap.cli:main など

[options.ext_modules]
# ダミー。実際は setup.py or setup_native.py で定義してもよいが、
# シンプルにするなら "setuptools.Extension" を setup.pyで書く方式もあり。